css/style.css
/* style for mystery --- view site in mobile view for best results*/






body {
    margin:0;
    padding:0;
	
    background-color: #D4D4D4;
	
   /* font-family: 'Merriweather Sans', sans-serif; */
    font-weight: 400;
	line-height:1.2;

	letter-spacing: 1px;

	
	
    	
}

.content p2 {
    margin-left:23%;
}
.whitebtn {
	display: inline-block;
	color: #666;
	background-color: #eee;
	text-transform: uppercase;
	letter-spacing: 2px;
	font-size: 120%;
	padding: 10px 30px;
	border-radius: 5px;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	border: 1px solid rgba(0,0,0,0.3);
	border-bottom-width: 3px;
	
}
#popdiv {
	display:none;	
}


#searchinp {
	width:90%;
	margin: 4%;
	border: solid;
	height: 20px;
	border-radius: 10px;	
	border-style:solid;
    border-color:#696969;
    border-width: 1px;
    clear:both;
    float:left;
    font-size:120%;
    padding:2% 1%;
    border-radius:4px;
    background-color:rgba(100, 100, 100, 0);
}

p {
	


    }
	

/* use Fira Mono for all headings*/

h1 {
   	font-size: 145%;
	font-family: 'Merriweather Sans', sans-serif;
    font-weight: 300;
    text-align: center; 
	font-weight: 700;
	line-height:1.2;
	
}

h2 {
    font-size:140%;
    text-align: center;
    font-family: 'Merriweather Sans', sans-serif;
    font-weight: 700;
	line-height:1.2;
}
input {
    font-family: 'Merriweather Sans', sans-serif;
    font-weight: 300;
	line-height:1.2;
}
a {
    text-decoration:none;
    color:#627f73;
	font-family: 'Merriweather Sans', sans-serif;
    font-weight: 300;
	line-height:1.2;
}

a:hover {
    
    color:#C4FFe6;
}

.hspace {
    margin: 0 4%;   
}
.vspace {
    margin: 4% 0;   
}

.center {
    width: 90%;
    margin:auto;

}

.center-text {
    text-align:center;   
}
.right-text {
    text-align:right;   
}
/* ============= SPLASH PAGE ============= */


.splashlogo {
	
	text-align:center;  
	
	
	}

.thumb {
  
 
  vertical-align: middle; 
  text-align: center;
	}

.crimetape {
    
 margin-right: 35px;
  margin-left: -5px;
	}
/* ============= HEADER STYLES ============= */
.header {
    margin:0px;
    width:100%;
	display:block;
    clear:both;
	float:left;
	margin-bottom:4px;
	
	background: -moz-linear-gradient(top, rgba(39,165,161,1) 0%, rgba(39,165,161,1) 90%, rgba(39,165,161,1) 48%, rgba(39,165,161,1) 200%); /* FF3.6-15 */
background: -webkit-linear-gradient(top, rgba(39,165,161,1) 0%,rgba(39,165,161,1) 90%,rgba(39,165,161,1) 48%,rgba(39,165,161,1)200%); /* Chrome10-25,Safari5.1-6 */
background: linear-gradient(to bottom, rgba(39,165,161,1) 0%,rgba(39,165,161,1)90%, rgba(39,165,161,1) 48%,rgba(39,165,161,1) 200%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2f957a', endColorstr='#002f957a',GradientType=0 ); /* IE6-9 */
	
}

.header2 {
    margin:0px;
    width:100%;
	display:block;
    clear:both;
	float:left;
	margin-bottom:4px;
	
	background: -moz-linear-gradient(top, rgba(39,165,161,1) 0%, rgba(39,165,161,1) 77%, rgba(39,165,161,1) 48%, rgba(39,165,161,1) 200%); /* FF3.6-15 */
background: -webkit-linear-gradient(top, rgba(39,165,161,1) 0%,rgba(39,165,161,1) 77%,rgba(39,165,161,1) 48%,rgba(39,165,161,1) 200%); /* Chrome10-25,Safari5.1-6 */
background: linear-gradient(to bottom, rgba(39,165,161,1) 0%,rgba(39,165,161,1) 77%, rgba(39,165,161,1) 48%,rgba(39,165,161,1) 200%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2f957a', endColorstr='#002f957a',GradientType=0 ); /* IE6-9 */
	
}

.logospot {
	
	width:30%;	
	margin-left:35%;
	float:left;

	
}

.logospot img {
	width:100%;
   
}
#userinfo {
    
	
	float:right;
	width:30%;
	text-align:right;
	margin:0;
   
}
#userinfo img {
	width:50%;	
	margin-left:20%;
	float:right;
	border-radius:50%;
}

#usern{
	font-family: 'Merriweather Sans', sans-serif;
    font-weight: 300;
	line-height:1.2;
	padding-right:2%;
}

#logo2 {
	
text-align: left;	
	
	}
	
	
.logospot2 {
	
	width:40%;	
	
	float:left;

	
}

.logospot2 img {
	width:115%;
   
}
/* ============= MAIN CONTENT STYLES ============= */
.content {

}

.content p{
         font-size: 10pt;
	font-family: 'Merriweather Sans', sans-serif;
    font-weight: 300;
	line-height:135%;
    text-align:left;  
	padding-left: 15px;
	margin-bottom: 12%;
	letter-spacing: 3px;

	margin-left: 10px;
}

#rinfo{
         font-size: 10pt;
	font-family: 'Merriweather Sans', sans-serif;
    font-weight: 300;
	line-height:135%;
    text-align:left;  
	padding-left: 15px;
	margin-bottom: 12%;
	letter-spacing: 3px;

	margin-left: 10px;
}
.content h4 {
    text-align:center;   
}

/* ------------- theme page ----------------*/
.themecase {
    margin:auto;   
    width:90%;
}
.themecase img {
    width:44%; 
    margin:3%;
}
.themecase img:nth-child(3n+0) {
    width: 92%;
    margin:5 0 4 0;
    
}
/* --------------- testing login page ----------------*/

.container {
  font-family: 'Source Sans Pro', sans-serif;
  color: white;
  font-weight: 300;
}
.container ::-webkit-input-placeholder {
  /* WebKit browsers */
  font-family: 'Source Sans Pro', sans-serif;
  color: white;
  font-weight: 300;
}
.container :-moz-placeholder {
  /* Mozilla Firefox 4 to 18 */
  font-family: 'Source Sans Pro', sans-serif;
  color: white;
  opacity: 1;
  font-weight: 300;
}
.container ::-moz-placeholder {
  /* Mozilla Firefox 19+ */
  font-family: 'Source Sans Pro', sans-serif;
  color: white;
  opacity: 1;
  font-weight: 300;
}
.container :-ms-input-placeholder {
  /* Internet Explorer 10+ */
  font-family: 'Source Sans Pro', sans-serif;
  color: white;
  font-weight: 300;
}
.wrapper {
/*
  position: absolute;
  top: 50%;
  left: 0;
  height: 550px;
  */
  width: 100%;
   position: relative;
  height: 100%;
 float:left;
  overflow: hidden;
}
.container.form-success .container h1 {
  -webkit-transform: translateY(85px);
      -ms-transform: translateY(85px);
          transform: translateY(85px);
}
/* ... */

